--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -1,9 +1,8 @@
-on:
-  push:
-    branches:
-      - master
+
 
 name: "Trigger: Push action"
+run-name: test shellcheck 🚀
+on: [push]
 permissions: {}
 
 jobs:
